# projectPy3

./: Teacher.py  example.db  game_data.db  myapp.py  pyproject.toml  teachers.db  workdb.py
