[tool.poetry]
name = "projectpy3"
version = "0.1.0"
description = ""
authors = ["nikitusyandra <chexov04@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "5.15"
sqlite-utils = "^3.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"